--- a/BookStore.csproj
+++ b/BookStore.csproj
@@ -97,6 +97,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Content\Style.css" />
     <Content Include="Global.asax" />
+    <Content Include="image\AKIRA.jpg" />
     <Content Include="image\templatemo_ads.jpg" />
     <Content Include="image\templatemo_bg.jpg" />
     <Content Include="image\templatemo_btn_01.jpg" />
